--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
-      <title>Kamran Jabbar | Resume</title>
+      <title>Kamran Jabbar | Curriculum Vitae</title>
       <link href="vendors/material-icon/css/materialdesignicons.min.css" rel="stylesheet">
       <link href="css/font-awesome.min.css" rel="stylesheet">
       <link href="vendors/linears-icon/style.css" rel="stylesheet">
