Project section add.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav navbar-right">
                      <li class="active"><a href="#about">ABOUT ME </a></li>
-                     <li><a href="#skill">Skill</a></li>
+                     <li><a href="#skill">Skills</a></li>
                      <li><a href="#experience">Experience</a></li>
+                     <li><a href="#project">Projects</a></li>
                      <li><a href="#education">Education</a></li>
                      <li><a href="#contact">CONTACT</a></li>
                   </ul>
@@ -140,7 +141,7 @@
             </section>
             <section class="myskill_area pad" id="skill">
                <div class="main_title">
-                  <h2>My Skill</h2>
+                  <h2>My Skills</h2>
                </div>
                <div class="row">
                   <div class="col-md-6 wow fadeInUp animated">
@@ -276,6 +277,12 @@
                   </div>
                </div>
             </section>
+            <section class="education_area pad" id="project">
+               <div class="main_title">
+                  <h2>Projects</h2>
+               </div>
+               <p>I worked on multiple projects, to get the detail of projects, please send me a message.</p>
+            </section>
             <section class="education_area pad" id="education">
                <div class="main_title">
                   <h2>Education</h2>
@@ -313,14 +320,11 @@
             </section>
             <section class="contact_area pad" id="contact">
                <div class="main_title">
-                  <h2>Contact Us</h2>
+                  <h2>Contact Me</h2>
                </div>
                <div class="row">
                   <div class="col-md-12">
                      <div class="left_contact_details wow fadeInUp animated">
-                        <div class="contact_title">
-                           <h3>Contact Info</h3>
-                        </div>
                         <p>Feel free to get in touch with me. I am always open to discussing new projects, creative idea or opportunities to be part of your vision.</p>
                         <div class="media">
                            <div class="media-left">
@@ -383,6 +387,7 @@
                      <li><a href="#about">ABOUT ME </a></li>
                      <li><a href="#skill">Skill</a></li>
                      <li><a href="#experience">Experience</a></li>
+                     <li><a href="#project">Projects</a></li>
                      <li><a href="#education">Education</a></li>
                      <li><a href="#contact">CONTACT</a></li>
                   </ul>
