Chat plugin update.

--- a/index.html
+++ b/index.html
@@ -29,34 +29,19 @@
 
           gtag('config', 'UA-110281890-2');
       </script>
+      <!--Start of Tawk.to Script-->
       <script type="text/javascript">
-          (function () {
-              var head = document.getElementsByTagName("head").item(0);
-              var script = document.createElement("script");
-
-              var src = (document.location.protocol == 'https:'
-                  ? 'https://www.formilla.com/scripts/feedback.js'
-                  : 'http://www.formilla.com/scripts/feedback.js');
-
-              script.setAttribute("type", "text/javascript");
-              script.setAttribute("src", src); script.setAttribute("async", true);
-
-              var complete = false;
-
-              script.onload = script.onreadystatechange = function () {
-                  if (!complete && (!this.readyState
-                      || this.readyState == 'loaded'
-                      || this.readyState == 'complete')) {
-                      complete = true;
-                      Formilla.guid = 'cs407f87-8abf-4cb0-986d-c239053dd8be';
-                      Formilla.loadWidgets();
-                  }
-              };
-
-              head.appendChild(script);
+          var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+          (function(){
+              var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+              s1.async=true;
+              s1.src='https://embed.tawk.to/59da6054c28eca75e4624cf4/default';
+              s1.charset='UTF-8';
+              s1.setAttribute('crossorigin','*');
+              s0.parentNode.insertBefore(s1,s0);
           })();
       </script>
-
+      <!--End of Tawk.to Script-->
    </head>
    <body class="light_bg" data-spy="scroll" data-target="#bs-example-navbar-collapse-1" data-offset="80" data-scroll-animation="true">
       <div id="preloader">
