Project section description update.

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                <div class="main_title">
                   <h2>Projects</h2>
                </div>
-               <p>I worked on multiple projects, to get the detail of projects, please send me a message.</p>
+               <p>I worked on multiple projects, a complete project list will be sent to you on request.</p>
             </section>
             <section class="education_area pad" id="education">
                <div class="main_title">
