Add latest information.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
    <head>
       <meta charset="utf-8">
-      <meta name="description" content="Kamran Jabbar is Software Engineer and Web Developer, Email: contact@kamranjabbar.com , Contact & WhatsApp # +923068662017">
+      <meta name="description" content="Kamran Jabbar is Software Engineer and Web Developer, Email: contact@kamranjabbar.com , Contact & WhatsApp # +358417177847">
       <meta name="keywords" content="Kamran Jabbar, Kamran Jabbar resume, Kamran Jabbar PUJC, Kami866 , 8667k8665k , Kamran Jabbar CV, Professional Web Developer, Kamranjabbar, PHP Developer, Codeigniter Developer, Laravel Developer, Web Developer, 3 years experience developer">
       <meta name="author" content="Kamran Jabbar">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -88,7 +88,7 @@
                   <div class="col-md-7">
                      <div class="row person_details">
                         <h3><span>Kamran Jabbar</span></h3>
-                        <h4>Software Engineer and Web Developer</h4>
+                        <h4>Master Degree Student at University of Eastern Finland</h4>
                            <p>Since 2016, I have served as a Software Engineer, I have been repeatedly recognized for
                               developing innovative solutions for globally deployed software and websites. I am
                               responsible for full initial requirement gathering to design, coding, testing, documentation
@@ -97,17 +97,15 @@
                               and well known APIs. I am always open to the challenges in software development.</p>
                         <div class="person_information">
                            <ul>
-                              <li>Nationality</li>
-                              <li>Address</li>
+                              <li>Location</li>
                               <li>Phone</li>
                               <li>Skype</li>
                               <li>Email</li>
                               <li>Website</li>
                            </ul>
                            <ul>
-                              <li>Citizen of Pakistan</li>
-                              <li>Nishat Colony, Lahore (54000)</li>
-                              <li><a href="tel:+923068662017">+92 306 866 2017</a></li>
+                              <li>Joensuu, Finland</li>
+                              <li><a href="tel:+358417177847">+358 41 7177847</a></li>
                               <li><a href="https://join.skype.com/invite/n40wneB2Evbz" target="_blank">live:kamran.jabbar_3</a></li>
                               <li><a href="mailto:contact@kamranjabbar.com"><span>contact@kamranjabbar.com</span></a></li>
                               <li><a href="http://www.kamranjabbar.html">www.kamranjabbar.com</a></li>
@@ -118,7 +116,7 @@
                               <li><a href="https://bitbucket.org/kamranjabbar" target="_blank"><i class="fa fa-bitbucket"></i></a></li>
                            <li><a href="https://www.linkedin.com/in/kamran-jabbar/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                               <li><a href="https://join.skype.com/invite/n40wneB2Evbz" target="_blank"><i class="fa fa-skype"></i></a></li>
-                              <li><a href="https://web.whatsapp.com/send?phone=923068662017" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+                              <li><a href="https://web.whatsapp.com/send?phone=358417177847" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
                               <li><a href="https://stackoverflow.com/users/6372637/kamran-jabbar" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
                               <li><a href="https://web.facebook.com/kamrnjabbar" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         </ul>
@@ -255,7 +253,7 @@
                </div>
                <div class="education_inner_area">
                   <div class="education_item wow fadeInUp animated" data-line="D">
-                     <h6>Nov 2017-Present</h6>
+                     <h6>Nov 2017-Aug 2019</h6>
                      <a target="_blank" href="https://pujc.edu.pk">
                         <h4>Software Engineer</h4>
                      </a>
@@ -295,6 +293,13 @@
                   <h2>Education</h2>
                </div>
                <div class="education_inner_area">
+                  <div class="education_item wow fadeInUp animated" data-line="E">
+                     <h6>2019-Present</h6>
+                     <a target="_blank" href="http://www.uef.fi/web/impit">
+                        <h4>International Master's Degree Programme in Information Technology</h4>
+                     </a>
+                     <h5>University of Eastern Finland(Joensuu)</h5>
+                  </div>
                   <div class="education_item wow fadeInUp animated" data-line="D">
                      <h6>2012-2016</h6>
                      <a target="_blank" href="https://pujc.edu.pk">
@@ -374,7 +379,7 @@
                   <li><a href="https://bitbucket.org/kamranjabbar" target="_blank"><i class="fa fa-bitbucket"></i></a></li>
                   <li><a href="https://www.linkedin.com/in/kamran-jabbar/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                   <li><a href="https://join.skype.com/invite/n40wneB2Evbz" target="_blank"><i class="fa fa-skype"></i></a></li>
-                  <li><a href="https://web.whatsapp.com/send?phone=923068662017" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+                  <li><a href="https://web.whatsapp.com/send?phone=358417177847" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
                   <li><a href="https://stackoverflow.com/users/6372637/kamran-jabbar" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
                   <li><a href="https://web.facebook.com/kamrnjabbar" target="_blank"><i class="fa fa-facebook"></i></a></li>
                </ul>
