Update current location.

--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
                               <i class="fa fa-map-marker"></i>
                            </div>
                            <div class="media-body">
-                              <h4>Address</h4>
-                              <p>Nishat Colony, Lahore (54000), Punjab, Pakistan</p>
+                              <h4>Location</h4>
+                              <p>Joensuu, Finland</p>
                            </div>
                         </div>
                         <div class="media">
