Update resume skills.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
    <head>
       <meta charset="utf-8">
-      <meta name="description" content="Kamran Jabbar is Software Engineer and Web Developer, Email: contact@kamranjabbar.com , Contact & WhatsApp # +358417177847">
+      <meta name="description" content="Kamran Jabbar is Software Engineer, Email: contact@kamranjabbar.com , Contact & WhatsApp # +358417177847">
       <meta name="keywords" content="Kamran Jabbar, Kamran Jabbar resume, Kamran Jabbar PUJC, Kami866 , 8667k8665k , Kamran Jabbar CV, Professional Web Developer, Kamranjabbar, PHP Developer, Codeigniter Developer, Laravel Developer, Web Developer, 3 years experience developer">
       <meta name="author" content="Kamran Jabbar">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -88,13 +88,11 @@
                   <div class="col-md-7">
                      <div class="row person_details">
                         <h3><span>Kamran Jabbar</span></h3>
-                        <h4>Master Degree Student at University of Eastern Finland</h4>
-                           <p>Since 2016, I have served as a Software Engineer, I have been repeatedly recognized for
+                        <h4>IMPIT Student at University of Eastern Finland</h4>
+                           <p id="summary">Since 2016, I have served as a Software Engineer, I have been repeatedly recognized for
                               developing innovative solutions for globally deployed software and websites. I am
                               responsible for full initial requirement gathering to design, coding, testing, documentation
-                              and implementation. I have developed efficiently many projects using ReactJs, Blockstack,
-                              Solidity Ethereum, Smart Contract, NodeJs, PHP, Symfony, Laravel, Codeigniter, ColdFusion,
-                              and well known APIs. I am always open to the challenges in software development.</p>
+                              and implementation. I have developed efficiently many projects using JavaScript, Blockstack, NodeJs, PHP, Symfony, Laravel, Codeigniter, Solidity Ethereum, Smart Contract, Python, and well known APIs. I am always open to the challenges in software development.</p>
                         <div class="person_information">
                            <ul>
                               <li>Location</li>
@@ -130,21 +128,17 @@
                </div>
                <div class="row">
                   <div class="col-md-6 wow fadeInUp animated">
-                     <div class="skill_text">
-                        <h4>Web development Skills</h4>
-                        <p></p>
-                     </div>
                      <div class="skill_item_inner">
                         <div class="single_skill">
-                           <h4>Php & MySQL</h4>
+                           <h4>JavaScript, JQuery</h4>
                            <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">90</span>%</div>
+                              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                                 <div class="progress_parcent"><span class="counter">70</span>%</div>
                               </div>
                            </div>
                         </div>
                         <div class="single_skill">
-                           <h4>PHP FRAMEWORKS (CODEIGNITER, SYMFONY, LARAVEL)</h4>
+                           <h4>PHP</h4>
                            <div class="progress">
                               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                  <div class="progress_parcent"><span class="counter">80</span>%</div>
@@ -152,39 +146,19 @@
                            </div>
                         </div>
                         <div class="single_skill">
-                           <h4>Wordpress (CMS)</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">85</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="single_skill">
-                           <h4>Html, Css & Bootstrap</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">75</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="single_skill">
-                           <h4>JavaScript (JQuery)</h4>
+                           <h4>CODEIGNITER, SYMFONY, LARAVEL, Wordpress</h4>
                            <div class="progress">
                               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">70</span>%</div>
+                                 <div class="progress_parcent"><span class="counter">80</span>%</div>
                               </div>
                            </div>
                         </div>
                      </div>
                   </div>
                   <div class="col-md-6 wow fadeInUp animated">
-                     <div class="skill_text">
-                        <h4>Blockchain Skills</h4>
-                        <p></p>
-                     </div>
                      <div class="skill_item_inner">
                         <div class="single_skill">
-                           <h4>SOLIDITY</h4>
+                           <h4>Database</h4>
                            <div class="progress">
                               <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                                  <div class="progress_parcent"><span class="counter">70</span>%</div>
@@ -192,34 +166,18 @@
                            </div>
                         </div>
                         <div class="single_skill">
-                           <h4>WEB3</h4>
+                           <h4>Python</h4>
                            <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">70</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="single_skill">
-                           <h4>ERC20</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">70</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="single_skill">
-                           <h4>BLOCKSTACK</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">65</span>%</div>
+                              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                                 <div class="progress_parcent"><span class="counter">50</span>%</div>
                               </div>
                            </div>
                         </div>
                         <div class="single_skill">
                            <h4>Well Known APIs</h4>
                            <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">90</span>%</div>
+                              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                 <div class="progress_parcent"><span class="counter">80</span>%</div>
                               </div>
                            </div>
                         </div>
@@ -252,33 +210,19 @@
                   <h2>Experience</h2>
                </div>
                <div class="education_inner_area">
-                  <div class="education_item wow fadeInUp animated" data-line="D">
+                  <div class="education_item wow fadeInUp animated" data-line="2">
                      <h6>Nov 2017-Aug 2019</h6>
                      <a target="_blank" href="https://pujc.edu.pk">
                         <h4>Software Engineer</h4>
                      </a>
                      <h5>Coeus Solutions GmbH</h5>
                   </div>
-                  <div class="education_item wow fadeInUp animated" data-line="C">
-                     <h6>Oct 2017-Jun 2018</h6>
-                     <a target="_blank" href="#">
-                        <h4>Software Engineer (Remote)</h4>
-                     </a>
-                     <h5>Dam United for Technology</h5>
-                  </div>
-                  <div class="education_item wow fadeInUp animated b_section" data-line="B">
+                  <div class="education_item wow fadeInUp animated b_section" data-line="1">
                      <h6>Oct 2016-Oct 2017</h6>
                      <a target="_blank" href="http://www.techleadz.com/">
-                        <h4>Senior Web Developer</h4>
+                        <h4>Web Developer</h4>
                      </a>
                      <h5>Techleadz</h5>
-                  </div>
-                  <div class="education_item wow fadeInUp animated a_section" data-line="A">
-                     <h6>Feb 2016-April 2017</h6>
-                     <a href="http://www.fiverr.com/kamranjabbar" target="_blank">
-                        <h4>Professional Freelancer</h4>
-                     </a>
-                     <h5>Fiverr</h5>
                   </div>
                </div>
             </section>
@@ -293,35 +237,35 @@
                   <h2>Education</h2>
                </div>
                <div class="education_inner_area">
-                  <div class="education_item wow fadeInUp animated" data-line="E">
+                  <div class="education_item wow fadeInUp animated" data-line="5">
                      <h6>2019-Present</h6>
                      <a target="_blank" href="http://www.uef.fi/web/impit">
                         <h4>International Master's Degree Programme in Information Technology</h4>
                      </a>
                      <h5>University of Eastern Finland(Joensuu)</h5>
                   </div>
-                  <div class="education_item wow fadeInUp animated" data-line="D">
+                  <div class="education_item wow fadeInUp animated" data-line="4">
                      <h6>2012-2016</h6>
                      <a target="_blank" href="https://pujc.edu.pk">
                         <h4>Bachelor of Computer Science (BSCS)</h4>
                      </a>
                      <h5>University of the Punjab, Jhelum Campus</h5>
                   </div>
-                  <div class="education_item wow fadeInUp animated" data-line="C">
+                  <div class="education_item wow fadeInUp animated" data-line="3">
                      <h6>2011-2012</h6>
                      <a target="_blank" href="https://www.pgc.edu/campus/jehlum">
                         <h4>Higher Secondary School</h4>
                      </a>
                      <h5>Punjab College G.T. Road Jhelum</h5>
                   </div>
-                  <div class="education_item wow fadeInUp animated b_section" data-line="B">
+                  <div class="education_item wow fadeInUp animated b_section" data-line="2">
                      <h6>2009-2010</h6>
                      <a target="_blank" href="https://www.google.com/maps/dir/''/Govt.+Comprehensive+High+School+Jhelum/data=!4m5!4m4!1m0!1m2!1m1!1s0x391f911e91cc0b63:0xe5f51464675e1b8d?sa=X&ved=0ahUKEwi_8Kydle7UAhUFqY8KHbWBDLsQ9RcIdzAP">
                         <h4>Secondary School</h4>
                      </a>
                      <h5>Govt. Comprehensive High School Jhelum</h5>
                   </div>
-                  <div class="education_item wow fadeInUp animated a_section" data-line="A">
+                  <div class="education_item wow fadeInUp animated a_section" data-line="1">
                      <h6>2008</h6>
                      <a target="_blank" href="https://www.google.com/maps/place/Nice+Institute+of+Computer+Education/@32.927831,73.7274274,17z/data=!3m1!4b1!4m5!3m4!1s0x391f90c385a4f58f:0xb4f61204afa94c55!8m2!3d32.927831!4d73.7296161">
                         <h4>Office Management</h4>
