Update the timeline description.

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                   <div class="col-md-7">
                      <div class="row person_details">
                         <h3><span>Kamran Jabbar</span></h3>
-                        <h4>IMPIT Student at University of Eastern Finland</h4>
-                           <p id="summary">Since 2016, I have served as a Software Engineer, I have been repeatedly recognized for
+                        <h4>Looking for an Opportunity as Software Developer</h4>
+                           <p id="summary">Since 2016, I have served as a Software Developer, I have been repeatedly recognized for
                               developing innovative solutions for globally deployed software and websites. I am
                               responsible for full initial requirement gathering to design, coding, testing, documentation
-                              and implementation. I have developed efficiently many projects using JavaScript, Blockstack, NodeJs, PHP, Symfony, Laravel, Codeigniter, Solidity Ethereum, Smart Contract, Python, and well known APIs. I am always open to the challenges in software development.</p>
+                              and implementation. I have developed efficiently many projects using Python ,JavaScript, Blockstack, NodeJs, PHP, Symfony, Laravel, Codeigniter, Solidity Ethereum, Smart Contract, and well known APIs. I am always open to the challenges in software development.</p>
                         <div class="person_information">
                            <ul>
                               <li>Location</li>
@@ -102,7 +102,7 @@
                               <li>Website</li>
                            </ul>
                            <ul>
-                              <li>Joensuu, Finland</li>
+                              <li>Helsinki, Finland</li>
                               <li><a href="tel:+358417177847">+358 41 7177847</a></li>
                               <li><a href="https://join.skype.com/invite/n40wneB2Evbz" target="_blank">live:kamran.jabbar_3</a></li>
                               <li><a href="mailto:contact@kamranjabbar.com"><span>contact@kamranjabbar.com</span></a></li>
@@ -240,9 +240,9 @@
                   <div class="education_item wow fadeInUp animated" data-line="5">
                      <h6>2019-Present</h6>
                      <a target="_blank" href="http://www.uef.fi/web/impit">
-                        <h4>International Master's Degree Programme in Information Technology</h4>
+                        <h4>Master of Science in Computer Science</h4>
                      </a>
-                     <h5>University of Eastern Finland(Joensuu)</h5>
+                     <h5>University of Eastern Finland</h5>
                   </div>
                   <div class="education_item wow fadeInUp animated" data-line="4">
                      <h6>2012-2016</h6>
